force-app/main/default/objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <label>Note</label>
    <nameField>
        <displayFormat>NOTE-{00000000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>