force-app/main/default/objects/Note__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea</label>
    <referenceTo>Idea__c</referenceTo>
    <relationshipLabel>Progress Update</relationshipLabel>
    <relationshipName>Progress_Update</relationshipName>
    <type>Lookup</type>
</CustomField>