force-app/main/default/objects/Note__c/fields/Include_in_Month_End_Report__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Month_End_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Month End Report?</label>
    <type>Checkbox</type>
</CustomField>